# balancer

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker.nix  flake.nix
.github/workflows/: build.yml
examples/: config.toml  docker-compose.yml  example.env
src/: check.rs  config.rs  main.rs  util.rs
src/consul/: client.rs  config.rs  mod.rs  service.rs  util.rs
