[package]
name = "balancer"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive"] }
dotenvy = "0.15.7"
hyper = "1.8.1"
log = "0.4.29"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = { version = "3.16.1", features = ["base64", "json"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
uuid = { version = "1.19.0", features = ["v4"] }
